# chatbot-finance

./: .gitignore  docker-compose.yml  pyproject.toml
chatbot_finance/: run.py
notebooks/: chunk_pdf.ipynb  evaluate_chatbot.ipynb
scripts/: build_chromaDB.py  query_chromaDB.py
